hotstuff_runner/check_errors.log
    Checking smallvec v1.15.1
    Checking getrandom v0.2.16
   Compiling syn v2.0.104
    Checking fnv v1.0.7
    Checking futures-channel v0.3.31
   Compiling getrandom v0.3.3
    Checking equivalent v1.0.2
    Checking hashbrown v0.16.0
   Compiling crossbeam-utils v0.8.21
   Compiling httparse v1.10.1
    Checking rand_core v0.6.4
    Checking parking_lot_core v0.9.11
    Checking ahash v0.7.8
    Checking indexmap v2.12.0
    Checking tower-service v0.3.3
   Compiling rustversion v1.0.21
    Checking parking_lot v0.12.4
    Checking try-lock v0.2.5
    Checking want v0.3.1
    Checking hashbrown v0.12.3
    Checking rand_chacha v0.3.1
    Checking httpdate v1.0.3
    Checking http v0.2.12
    Checking rand v0.8.5
   Compiling ahash v0.8.12
   Compiling radium v0.7.0
    Checking subtle v2.6.1
    Checking http-body v0.4.6
    Checking http v1.3.1
    Checking num_cpus v1.17.0
   Compiling indexmap v1.9.3
   Compiling syn v1.0.109
    Checking bitflags v2.9.1
   Compiling either v1.15.0
   Compiling rustix v1.0.8
    Checking tap v1.0.1
    Checking wyz v0.5.1
   Compiling itertools v0.12.1
   Compiling tokio-macros v2.5.0
   Compiling tracing-attributes v0.1.30
   Compiling futures-macro v0.3.31
   Compiling zeroize_derive v1.4.2
   Compiling serde_derive v1.0.219
   Compiling axum-core v0.3.4
    Checking zeroize v1.8.1
    Checking tokio v1.47.0
    Checking futures-util v0.3.31
   Compiling pin-project-internal v1.1.10
    Checking tracing v0.1.41
   Compiling anyhow v1.0.98
    Checking errno v0.3.13
    Checking socket2 v0.5.10
    Checking tower-layer v0.3.3
   Compiling shlex v1.3.0
    Checking funty v2.0.0
   Compiling cc v1.2.30
    Checking der v0.7.10
    Checking bitvec v1.0.1
    Checking serde v1.0.219
   Compiling prost-derive v0.12.6
    Checking pin-project v1.1.10
   Compiling axum v0.6.20
   Compiling async-trait v0.1.89
    Checking hashbrown v0.14.5
    Checking http-body v1.0.1
    Checking core-foundation v0.9.4
    Checking tokio-util v0.7.16
    Checking security-framework-sys v2.15.0
   Compiling num-traits v0.2.19
   Compiling crc32fast v1.5.0
   Compiling native-tls v0.2.14
    Checking fastrand v2.3.0
    Checking utf8parse v0.2.2
    Checking mime v0.3.17
    Checking atomic-waker v1.1.2
    Checking h2 v0.3.27
    Checking h2 v0.4.12
    Checking anstyle-parse v0.2.7
    Checking tempfile v3.20.0
    Checking tower v0.4.13
    Checking security-framework v2.11.1
    Checking tokio-io-timeout v1.2.1
    Checking ff v0.12.1
    Checking prost v0.12.6
   Compiling blst v0.3.16
    Checking spki v0.7.3
   Compiling async-stream-impl v0.3.6
    Checking crossbeam-epoch v0.9.18
    Checking hyper v0.14.32
    Checking rand_xorshift v0.3.0
    Checking colorchoice v1.0.4
    Checking sync_wrapper v0.1.2
    Checking is_terminal_polyfill v1.70.1
    Checking percent-encoding v2.3.2
    Checking matchit v0.7.3
    Checking simd-adler32 v0.3.7
   Compiling thiserror v1.0.69
    Checking bitflags v1.3.2
    Checking anstyle v1.0.13
   Compiling gmp-mpfr-sys v1.6.8
    Checking anstyle-query v1.1.4
    Checking miniz_oxide v0.8.9
    Checking async-stream v0.3.6
    Checking pkcs8 v0.10.2
    Checking group v0.12.1
    Checking anstream v0.6.21
    Checking hyper v1.7.0
   Compiling borsh-schema-derive-internal v0.10.4
   Compiling borsh-derive-internal v0.10.4
    Checking tokio-stream v0.1.17
   Compiling thiserror-impl v1.0.69
    Checking crossbeam-channel v0.5.15
    Checking threadpool v1.8.1
    Checking hyper-timeout v0.4.1
    Checking strsim v0.11.1
    Checking minimal-lexical v0.2.1
    Checking clap_lex v0.7.6
   Compiling az v1.2.1
   Compiling heck v0.5.0
    Checking nom v7.1.3
    Checking ed25519 v2.2.3
    Checking clap_builder v4.5.49
   Compiling clap_derive v4.5.49
    Checking hyper-util v0.1.17
    Checking parking_lot_core v0.8.6
    Checking tracing-subscriber v0.3.19
   Compiling borsh-derive v0.10.4
    Checking flate2 v1.1.4
    Checking tokio-native-tls v0.3.1
    Checking pairing v0.22.0
    Checking curve25519-dalek v4.1.3
    Checking prost-types v0.12.6
    Checking http-body-util v0.1.3
   Compiling typed-builder-macro v0.16.2
    Checking metrics v0.22.4
    Checking quanta v0.12.6
    Checking env_filter v0.1.4
    Checking sketches-ddsketch v0.2.2
   Compiling rug v1.28.0
    Checking byte-slice-cast v1.2.3
    Checking arrayvec v0.7.6
    Checking bytemuck v1.24.0
    Checking blstrs v0.6.2
    Checking typed-builder v0.16.2
    Checking rgb v0.8.52
    Checking num-format v0.4.4
    Checking metrics-util v0.16.3
    Checking hyper-tls v0.6.0
    Checking serde_json v1.0.142
    Checking tonic v0.10.2
    Checking ed25519-dalek v2.2.0
    Checking hdrhistogram v7.5.4
    Checking env_logger v0.11.8
    Checking clap v4.5.49
    Checking borsh v0.10.4
    Checking parking_lot v0.11.2
    Checking crossbeam-deque v0.8.6
    Checking dashmap v6.1.0
    Checking futures-executor v0.3.31
    Checking crossbeam-queue v0.3.12
    Checking lru v0.7.8
    Checking quick-xml v0.26.0
    Checking is-terminal v0.4.16
    Checking humantime v2.3.0
    Checking base64 v0.22.1
    Checking hex v0.4.3
    Checking ipnet v2.11.0
    Checking str_stack v0.1.0
    Checking reed-solomon-erasure v6.0.0
    Checking crossbeam v0.8.4
    Checking futures v0.3.31
    Checking hotstuff_rs v0.4.0 (/Users/xzha5518/Documents/experiment/hotstuff-docker/hotstuff_rs)
    Checking chrono v0.4.41
    Checking inferno v0.11.21
    Checking blsttc v8.0.2
    Checking metrics-exporter-prometheus v0.14.0
    Checking tracing-flame v0.2.0
    Checking bincode v1.3.3
    Checking console-api v0.6.0
    Checking dashmap v5.5.3
    Checking uuid v1.18.1
    Checking core_affinity v0.6.1
    Checking console-subscriber v0.2.0
    Checking hotstuff_runner v0.1.0 (/Users/xzha5518/Documents/experiment/hotstuff-docker/hotstuff_runner)
error[E0425]: cannot find value `owned_keys` in this scope
   --> src/smrol/sequencing.rs:711:17
    |
711 |                 owned_keys.push(pk_public);
    |                 ^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `owned_keys` in this scope
   --> src/smrol/sequencing.rs:712:43
    |
712 |                 let pk_aff = as_g2_affine(owned_keys.last().unwrap());
    |                                           ^^^^^^^^^^ not found in this scope

For more information about this error, try `rustc --explain E0425`.
error: could not compile `hotstuff_runner` (lib) due to 2 previous errors
